--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -92,12 +92,17 @@
     line-height: 1.3;
 }
 
-.comparison-table-custom {
+.comparison-table-custom[data-theme="light"] {
     border: 1px solid var(--sl-color-gray-5);
     border-radius: 8px;
     overflow: hidden;
     background-color: var(--sl-color-bg);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03), 0 1px 2px rgba(0, 0, 0, 0.06);
+}
+
+.comparison-table-custom[data-theme="dark"] {
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .table-custom-header,
@@ -140,7 +145,11 @@
     font-weight: 500;
     color: var(--primary);
     padding-top: 16px;
-    /* 다른 셀의 첫 줄과 시각적 정렬을 위해 약간의 패딩 추가 */
+}
+
+.feature-col .text-item {
+    color: var(--sl-color-text);
+    font-weight: 600;
 }
 
 .bullet-item:last-child,
