--- a/src/components/ChoiceCardGrid.astro
+++ b/src/components/ChoiceCardGrid.astro
@@ -11,4 +11,10 @@
     <div>
         <slot name="choiceTwo" />
     </div>
+    <div>
+        <slot name="choiceThree" />
+    </div>
+    <div>
+        <slot name="choiceFour" />
+    </div>
 </div>
